# samplegl

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: README.md
include/son8/: window.hxx
samples/glad/: CMakeLists.txt  cube.cxx  mingl.cxx
samples/glfw/: CMakeLists.txt  min.cxx  mingl.cxx
samples/son8samplegl/: CMakeLists.txt  mingl.cxx
samples/son8samplegl/vertex_progress/: 0_list.cxx  1_draw.cxx  2_vbo.cxx  3_shader.cxx
samples/son8samplegl/vertex_progress/helper/: cube.hxx  header.hxx
source/: README.md  main.cxx
