cmake_minimum_required(VERSION 3.8)
project(PROJECT LANGUAGES C CXX)

# add_library(${PROJECT_NAME})
# add_executable(${PROJECT_NAME})

# target_include_directories(${PROJECT_NAME}
#     PUBLIC include
#     PRIVATE source
# )

# target_compile_features(${PROJECT_NAME}
#     PRIVATE cxx_std_17
#     PRIVATE c_std_11
# )

# target_link_libraries(${PROJECT_NAME})
